fix path, fix logger